# llama.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  graph.vs
common/: arg.cpp  common.cpp  common.h
examples/batched/: batched.cpp
examples/batched-bench/: batched-bench.cpp
examples/main/: CMakeLists.txt  blade-llm.cpp
examples/server/: server.cpp
ggml/include/: ggml.h
ggml/src/: ggml-backend-reg.cpp  ggml.c
ggml/src/ggml-cpu/: ggml-cpu-traits.cpp  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cuda/: binbcast.cu  ggml-cuda.cu
include/: llama.h
prompts/: chat-with-qwen.jinja
src/: llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-hparams.h  llama-kv-cache.h  llama-model.cpp  llama-model.h  llama.cpp
